Respect forbidden APIs, update build process